--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "deps/rmw"]
 	path = deps/rmw
 	url = https://github.com/ros2/rmw.git
+[submodule "deps/rcutils"]
+	path = deps/rcutils
+	url = https://github.com/ros2/rcutils.git
+[submodule "deps/rosidl"]
+	path = deps/rosidl
+	url = https://github.com/ros2/rosidl.git
